--- a/style.css
+++ b/style.css
@@ -1,18 +1,54 @@
 body {
-background-color: azure;
-background-origin: 0;
-background-size: auto;
-
+background-color: rgb(249, 249, 233)
 }
 
 
 
 h1 {
-    font-size: 20px;
+    font-size: 75px;
+    color:rgb(96, 56, 8)
+
 }
 
 
 h2 {
-    font-size: 12px;
+    font-size: 30px;
     font-style: oblique;
+    color:rgb(96, 56, 8)
+}
+div {
+    display: block;
+    width: 300px;
+    margin: auto;
+}
+
+.container { 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+.timeline {
+    position: relative;
+    width: 25px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.timeline::before {
+content: "";
+background: chocolate;
+width: 5px;
+height: 95%;
+position: absolute;
+left: 50%;
+transform: translateX(-50%);
+}
+
+.timeline-box {
+    justify-content: flex-start;
+    margin: 1em 0;
+    width: 300px;
+    display: block;
 }
