--- a/style.css
+++ b/style.css
@@ -1,25 +1,31 @@
 body {
+    font-size: x-large;
 background-color: rgb(249, 249, 233)
 }
 
 
 
 h1 {
+    font-weight: bold;
     font-size: 75px;
     color:rgb(96, 56, 8)
-
+    
 }
-
 
 h2 {
     font-size: 30px;
     font-style: oblique;
     color:rgb(96, 56, 8)
 }
+
+h3 {
+    font-size: 20px;
+    font-style: italic;
+    color: rgb(96, 56, 8);
+}
+
 div {
     display: block;
-    width: 300px;
-    margin: auto;
 }
 
 .container { 
@@ -27,28 +33,42 @@ div {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    width: 600px;
+    margin: auto;
+}
 
-}
-.timeline {
+p {
+    border-top: 2px dashed;
+    border-color: rgb(96, 56, 8) !important;
+    margin:0; padding: 30px;
+    counter-increment: section;
     position: relative;
-    width: 25px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
+    color: rgb(96, 56, 8);
+  }
+
 .timeline::before {
 content: "";
-background: chocolate;
+background: rgb(96, 56, 8);
 width: 5px;
 height: 95%;
 position: absolute;
 left: 50%;
-transform: translateX(-50%);
 }
 
 .timeline-box {
-    justify-content: flex-start;
     margin: 1em 0;
-    width: 300px;
-    display: block;
+    width: 20em;
+    padding: 1em;
+    box-shadow: rgb(59 4 47 / 32%) 0px 20px 30px -10px;
+}
+
+.timeline-date {
+    background: rgb(96, 56, 8);
+    border-radius: 2em;
+    position: absolute;
+    left: 50%;
+    margin-top: 25px;
+    margin-left: -65px;
+    padding: 0.5em;
+    color: white;
 }
