--- a/style.css
+++ b/style.css
@@ -56,10 +56,14 @@ left: 50%;
 }
 
 .timeline-box {
-    margin: 1em 0;
-    width: 20em;
-    padding: 1em;
+    margin: 16px 0;
+    width: 21.87em;
+    padding: 16px;
     box-shadow: rgb(59 4 47 / 32%) 0px 20px 30px -10px;
+}
+
+.timeline-box:nth-child(even) {
+align-self: flex-end;
 }
 
 .timeline-date {
@@ -69,6 +73,19 @@ left: 50%;
     left: 50%;
     margin-top: 25px;
     margin-left: -65px;
-    padding: 0.5em;
+    padding: 8px;
     color: white;
+}
+
+button {
+    background: none;
+    border: 2px solid rgb(96, 56, 8);
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: x-large;
+    cursor: alias;
+    display: block;
+    width: 120px;
+    height: 40px;
+    margin: 0 auto;
+    color: rgb(96, 56, 8);
 }
